bug impact minor to critical; risk - zero (web site only) LF bug 1639 - Tables on the website are unreadable http://old.linux-foundation.org/developer_bugzilla/show_bug.cgi?id=1639
Mercurial revision: 89d212a85b826cd54b4d0b7e2441fd643e88f0ca

--- a/website/linuxha.css
+++ b/website/linuxha.css
@@ -168,6 +168,7 @@ h5 {
 	}
 
 #i_content table {
+	border-collapse: collpase;
 	border: 1pt solid #cccccc;
 	margin: 2pt;
 	padding: 1pt;
@@ -176,7 +177,7 @@ h5 {
 #i_content tr td {
 	margin: 0;
 	padding: 0;
-	border: 0;
+	border: 1pt solid #cccccc;
 	}
 
 #i_content ul {
